test/files/neg/t2441.check
t2441.scala:12: error: private class Y escapes its defining scope as part of type Some[B.Y]
  override def f = Some(new B.Y)
               ^
one error found
